<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/space_background"
    tools:context=".MainActivity">



   <!--***************************************************************
        Label for the Sub total
       *************************************************************-->
    <TextView
        android:id="@+id/Lbl_Sub_Total"
        style="@style/WillyWonkaFont"
        android:textColor="@color/TextWhite"
        android:textSize="@dimen/TextSize"
        android:layout_width="126dp"
        android:layout_height="50dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/c"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <!--***************************************************************
     Label for the Discount percent
    *************************************************************-->
    <TextView
        android:id="@+id/Lbl_Discount_Percent"
        android:layout_width="253dp"
        android:layout_height="40dp"
        style="@style/Turtles"
        android:textColor="@color/TextWhite"
        android:textSize="@dimen/TextSize"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/cg"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

        <!--***************************************************************
         Label for the Discount Amount
        *************************************************************-->

    <TextView
        android:id="@+id/Lbl_Discount_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/VampireFont"
        android:textColor="@color/TextWhite"
        android:textSize="@dimen/TextSize"
        android:layout_row="2"
        android:layout_column="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Lbl_DiscountAmount"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        />

    <!--***************************************************************
         Label for the Total Amount
    ****************************************************************-->
    <TextView
        android:id="@+id/Lbl_Total"
        style="@style/DarkHeart_Font"
        android:layout_width="196dp"
        android:layout_height="40dp"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/Lbl_Total"
        android:textColor="@color/TextWhite"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.49" />

    <!--***************************************************************
         Label for the Input Amount
        *************************************************************-->
    <EditText
        android:id="@+id/Bill_Amount"
        style="@style/NumbersFont"
        android:layout_width="384dp"

        android:layout_height="64dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnSpan="2"
        android:layout_marginStart="150dp"
        android:layout_marginLeft="150dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/EnterAmount"
        android:inputType="number|numberDecimal"
        android:textColor="@color/TextWhite"
        android:textColorHint="@color/TextWhite"
        android:textSize="@dimen/TextSize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.124" />

    <!--***************************************************************
     Label for the percent values.
    *************************************************************-->
 <TextView
     android:id="@+id/Percent_Amount"
     style="@style/NumbersFont"
     android:layout_width="149dp"
     android:layout_height="wrap_content"
     android:layout_row="1"
     android:layout_column="1"
     android:layout_columnSpan="2"
     android:layout_marginStart="258dp"
     android:layout_marginLeft="268dp"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginRight="8dp"
     android:layout_marginBottom="8dp"
     android:text="@string/Percent_Amount"
     android:textColor="@color/TextWhite"
     android:textSize="@dimen/Number_TextSize"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.91"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.25" />


 <TextView
     android:id="@+id/Discount_Amount"
     style="@style/NumbersFont"
     android:layout_width="163dp"
     android:layout_height="wrap_content"
     android:layout_row="2"
     android:layout_column="1"
     android:layout_columnSpan="2"
     android:layout_marginStart="238dp"
     android:layout_marginLeft="268dp"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginRight="8dp"
     android:layout_marginBottom="8dp"
     android:text="@string/Discont_Amount"
     android:textColor="@color/TextWhite"
     android:textSize="@dimen/Number_TextSize"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.95"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.39" />

 <TextView
     android:id="@+id/Total_Amount"
     style="@style/NumbersFont"
     android:layout_width="159dp"
     android:layout_height="52dp"
     android:layout_row="3"
     android:layout_column="1"
     android:layout_columnSpan="2"
     android:layout_marginStart="238dp"
     android:layout_marginLeft="268dp"
     android:layout_marginTop="8dp"
     android:layout_marginEnd="8dp"
     android:layout_marginRight="8dp"
     android:layout_marginBottom="8dp"
     android:text="@string/TotalAmount"
     android:textColor="@color/TextWhite"
     android:textSize="@dimen/Number_TextSize"
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintHorizontal_bias="0.95"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintVertical_bias="0.49" />

    <!--***************************************************************
     Label for the Apply Button
    *************************************************************-->
    <Button
        android:id="@+id/CalculateOrder"
        android:layout_width="366dp"
        android:layout_height="90dp"
        style="@style/Spooky_Font"
        android:layout_row="4"
        android:layout_column="1"
        android:textSize="90dp"
        android:background="@color/BackgroundColor"
        android:textColor="@color/TextColor"
        android:layout_columnSpan="2"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/CalcBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.64" />

    <!--***************************************************************
     Label for the Fun picture to add effect.
    *************************************************************-->
    <ImageView
        android:id="@+id/SpookyImage"
        android:layout_width="380dp"
        android:layout_height="300dp"
        android:layout_marginTop="80dp"
        android:layout_row="4"
        android:layout_column="1"
        app:srcCompat="@drawable/blood" />

</GridLayout>